Get production credits for a track
