# docs/swagger.json
@@ -276,6 +276,12 @@
                 "name": {
                     "type": "string"
                 },
+                "producers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "release_date": {
                     "type": "string"
                 },
